[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/MoonLanding.gd" type="Script" id=1]
[ext_resource path="res://Sprites/moon.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Flame.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Apollo.png" type="Texture" id=4]
[ext_resource path="res://Sprites/spaceMeteors_001.png" type="Texture" id=5]
[ext_resource path="res://Sprites/spaceMeteors_002.png" type="Texture" id=6]
[ext_resource path="res://Sprites/spaceMeteors_003.png" type="Texture" id=7]
[ext_resource path="res://Sprites/spaceMeteors_004.png" type="Texture" id=8]
[ext_resource path="res://SFX/Explosion 32.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/Explosion2.wav" type="AudioStream" id=10]
[ext_resource path="res://Sprites/brusca.png" type="Texture" id=11]
[ext_resource path="res://Sprites/dura.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Estrellada.png" type="Texture" id=13]
[ext_resource path="res://Sprites/suave.png" type="Texture" id=14]
[ext_resource path="res://Sprites/teclas.png" type="Texture" id=15]

[node name="MoonLanding" type="Node2D"]
script = ExtResource( 1 )
initial_position = Vector2( 250, 50 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 632.626, 377.484 )
scale = Vector2( 1.12047, 1.12047 )
texture = ExtResource( 2 )

[node name="Flame" type="Sprite" parent="."]
visible = false
position = Vector2( 698.68, 178.567 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 3 )
offset = Vector2( 0, 12 )

[node name="LatFlame" type="Sprite" parent="."]
visible = false
position = Vector2( 678, 160.003 )
rotation = 1.5708
scale = Vector2( 0.130457, 0.130457 )
texture = ExtResource( 3 )

[node name="Apollo" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 656.835, 371.757 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 683, 380 )
current = true

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 1200.0
margin_top = 50.0
margin_right = 1305.0
margin_bottom = 352.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 105.0
margin_bottom = 302.0

[node name="Label" type="Label" parent="GUI/VBoxContainer"]
margin_right = 105.0
margin_bottom = 14.0
text = "Altitud"

[node name="LblFloorDistance" type="Label" parent="GUI/VBoxContainer"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 32.0
text = "0000 [m]"
align = 2

[node name="Label3" type="Label" parent="GUI/VBoxContainer"]
margin_top = 36.0
margin_right = 105.0
margin_bottom = 50.0
text = "---------------------"

[node name="Label4" type="Label" parent="GUI/VBoxContainer"]
margin_top = 54.0
margin_right = 105.0
margin_bottom = 68.0
text = "Velocidad Vert."

[node name="LblVelocity" type="Label" parent="GUI/VBoxContainer"]
margin_top = 72.0
margin_right = 105.0
margin_bottom = 86.0
text = "0000 [m/s]"
align = 2

[node name="Label10" type="Label" parent="GUI/VBoxContainer"]
margin_top = 90.0
margin_right = 105.0
margin_bottom = 104.0
text = "---------------------"

[node name="Label6" type="Label" parent="GUI/VBoxContainer"]
margin_top = 108.0
margin_right = 105.0
margin_bottom = 122.0
text = "Vel x    ---- Vel y"

[node name="LblVelXandY" type="Label" parent="GUI/VBoxContainer"]
margin_top = 126.0
margin_right = 105.0
margin_bottom = 140.0
text = "0000 [m/s]"
align = 1

[node name="Label5" type="Label" parent="GUI/VBoxContainer"]
margin_top = 144.0
margin_right = 105.0
margin_bottom = 158.0
text = "---------------------"

[node name="Label8" type="Label" parent="GUI/VBoxContainer"]
margin_top = 162.0
margin_right = 105.0
margin_bottom = 176.0
text = "Tiempo"

[node name="LblTime" type="Label" parent="GUI/VBoxContainer"]
margin_top = 180.0
margin_right = 105.0
margin_bottom = 194.0
text = "0000 [s]"
align = 2

[node name="Label7" type="Label" parent="GUI/VBoxContainer"]
margin_top = 198.0
margin_right = 105.0
margin_bottom = 212.0
text = "---------------------"

[node name="Label9" type="Label" parent="GUI/VBoxContainer"]
margin_top = 216.0
margin_right = 105.0
margin_bottom = 230.0
text = "Empuje"

[node name="LblPush" type="Label" parent="GUI/VBoxContainer"]
margin_top = 234.0
margin_right = 105.0
margin_bottom = 248.0
text = "0000 [N]"
align = 2

[node name="Label12" type="Label" parent="GUI/VBoxContainer"]
margin_top = 252.0
margin_right = 105.0
margin_bottom = 266.0
text = "---------------------"

[node name="Label11" type="Label" parent="GUI/VBoxContainer"]
margin_top = 270.0
margin_right = 105.0
margin_bottom = 284.0
text = "Combustible"

[node name="LblFuel" type="Label" parent="GUI/VBoxContainer"]
margin_top = 288.0
margin_right = 105.0
margin_bottom = 302.0
text = "0000 [Kg]"
align = 2

[node name="Meteoros" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Meteoro1" type="Sprite" parent="Meteoros"]
position = Vector2( 605.231, 370.817 )
scale = Vector2( 0.280851, 0.280851 )
texture = ExtResource( 5 )

[node name="Meteoro2" type="Sprite" parent="Meteoros"]
position = Vector2( 1515.2, -22.1487 )
scale = Vector2( 0.159391, 0.159391 )
texture = ExtResource( 6 )

[node name="Meteoro3" type="Sprite" parent="Meteoros"]
position = Vector2( -225.152, -10.8082 )
scale = Vector2( 0.125559, 0.125559 )
texture = ExtResource( 7 )

[node name="Meteoro4" type="Sprite" parent="Meteoros"]
position = Vector2( 1577.54, 393.702 )
scale = Vector2( 0.300951, 0.300951 )
texture = ExtResource( 8 )

[node name="Meteoro5" type="Sprite" parent="Meteoros"]
position = Vector2( -532.706, 198.622 )
scale = Vector2( 0.198422, 0.198422 )
texture = ExtResource( 8 )

[node name="Meteoro6" type="Sprite" parent="Meteoros"]
position = Vector2( 1565, 172.009 )
scale = Vector2( 0.168174, 0.168174 )
texture = ExtResource( 6 )

[node name="Audio" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="AudioBurner" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
volume_db = -3.029

[node name="AudioLatBurner" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )

[node name="EndCanvas" type="CanvasLayer" parent="."]

[node name="EndGame" type="Control" parent="EndCanvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="EndCanvas/EndGame"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.129412, 0.984314, 0.741176 )

[node name="NaveImg" type="Sprite" parent="EndCanvas/EndGame/ColorRect"]
position = Vector2( 683.063, 181.674 )
scale = Vector2( 0.470076, 0.470076 )
texture = ExtResource( 4 )

[node name="BruscaImg" type="Sprite" parent="EndCanvas/EndGame/ColorRect"]
visible = false
position = Vector2( 684.775, 410.865 )
texture = ExtResource( 11 )

[node name="DuroImg" type="Sprite" parent="EndCanvas/EndGame/ColorRect"]
visible = false
position = Vector2( 684.775, 410.865 )
texture = ExtResource( 12 )

[node name="EstrelladaImg" type="Sprite" parent="EndCanvas/EndGame/ColorRect"]
visible = false
position = Vector2( 684.775, 410.865 )
texture = ExtResource( 13 )

[node name="SuaveImg" type="Sprite" parent="EndCanvas/EndGame/ColorRect"]
visible = false
position = Vector2( 684.775, 410.865 )
texture = ExtResource( 14 )

[node name="StartCanvas" type="CanvasLayer" parent="."]

[node name="StartGame" type="Control" parent="StartCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="StartCanvas/StartGame"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.945098, 0.156863, 0, 0.890196 )

[node name="Sprite" type="Sprite" parent="StartCanvas/StartGame/ColorRect"]
position = Vector2( 709.944, 367.56 )
texture = ExtResource( 15 )
